--- a/React_Intro/index.css
+++ b/React_Intro/index.css
@@ -18,18 +18,68 @@
 }
 
 .card{
-    border: 1px solid black;
-    width: 200px;
+    border-radius: 2rem;
+    width: 265px;
     margin: 10px;
     padding: 5px;
 }
 
 .card >img{
     width: 100%;
+    border-radius: 2rem;
     height: 200px;
 }
 
+.card_name{
+    margin: 10px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.3px;
+    color: rgba(2, 6, 12, 0.75);
+    overflow: hidden;
+    width: 100%;
+    display: -webkit-box;
+    overflow-wrap: break-word;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+.card_rating{
+    margin:10px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    color:rgba(2, 6, 12, 0.75);
+    line-height: 19px;
+    letter-spacing: -0.3px;
+}
+.card_rating_img{
+    width: 25px;
+    margin-right: 10px;
+    line-height: 15px;
+    height: auto
+}
 .resturant-list{
     display: flex;
     flex-wrap: wrap;
+}
+.search-container{
+    margin: 10px;
+}
+.card_rel{
+  margin: 10px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
+  font-weight: 200; 
+  color: rgba(2, 6, 12, 0.75);
+  width:100%;
+  letter-spacing: -0.4;
+  overflow: hidden;
+  overflow-wrap:break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+
 }
